2008-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	patch #6609: Using PCI parallel port cards on Windows
	* ppiwin.c (ppi_open): If the port parameter passed from the
	-p option is neither lpt1/2/3, try interpreting it directly as
	a base address.
	* avrdude.1: Document the change.
	* doc/avrdude.texi: (Ditto.)

2008-11-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22882: Erase Cycle Counter does not work for stk500v2
	* stk500v2.c (stk500v2_chip_erase,stk500hv_chip_erase): Return
	the expected 0 for success rather than a protocol-dependant
	number.
 
2008-11-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22883: Chip Erase performed even with no-write flag (-n)
	* main.c: Do not erase the chip if both, -e and -n options have
	been specified.

2008-11-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #24589: AT90USB64* have wrong signature
	* avrdude.conf.in: Uncomment the correct, and delete the wrong
	signature for AT90USB646/647.  Alas, the datasheet has never been
	corrected for years.

2008-10-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Fix a serious memory corruption that happened when
	using the JTAG ICE mkII (or AVR Dragon) in ISP mode.  The wrong
	set of per-programmer private data had been allocated (stk500v2
	vs. jtagmkII) which was too small to hold the actual data.
	* jtagmkII.h: (Ditto.)
	* stk500v2.c: (Ditto.)

2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Implement Xmega JTAG support.
	* jtagmkII_private.h: Add EMULATOR_MODE_JTAG_XMEGA.

2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* main.c: Remember whether the device initialization worked, and
	allow to continue with -F if it failed yet do not attempt to
	perform anything on the device itself.  That way, -tF could be
	specified for programmers like the STK500/STK600 even without a
	device connected, just in order to allow changing parameters on
	the programmer itself.
	* avrdude.1: Document that possible use of the -F option.